--- a/components/Comment/comment_item.wxml
+++ b/components/Comment/comment_item.wxml
@@ -6,7 +6,7 @@
       </view>
       <view class='comment_item_content'>
         <view class='comment_top'>
-          <text class='user_name'>{{comment.user_name}}</text>
+          <text class='user_name'>{{comment.user_name}} - {{comment.created_at}}</text>
           <view><text class='reply frm' catchtap='showCommentForm'>回复</text></view>
         </view>
         <view class='comment_bottom'>
