--- a/pages/demand/demanddetail.wxml
+++ b/pages/demand/demanddetail.wxml
@@ -8,8 +8,8 @@
           {{demand.title}}
         </view>
         <view class='article_title_item article_title_img'>
-          <image src='../../assets/images/star.png' wx:if='{{!demand.isFavorite}}' bindtap='starDemand' data-demandid="{{demand.id}}"></image>
-          <image src='../../assets/images/star_selected.png' wx:if='{{demand.isFavorite}}' bindtap='unstarDemand' data-demandid="{{demand.id}}"></image>
+        <image src='../../assets/images/star.png' wx:if='{{!demand.favorite_id}}' bindtap='starDemand' data-demandid="{{demand.id}}"></image>
+        <image src='../../assets/images/star_selected.png' wx:if='{{demand.favorite_id}}' bindtap='unstarDemand' data-demandid="{{demand.id}}" data-favorableid="{{demand.favorite_id}}"></image>
         </view>
       </view>
       <view class="weui-article__h3" style='color: #555; font-size: 13px;'><span style='color: #78a5f1'>{{demand.username}}</span>  发布于  <span>{{demand.created_at}}</span></view>
