--- a/pages/demand/demandfavorite.wxml
+++ b/pages/demand/demandfavorite.wxml
@@ -3,11 +3,11 @@
   <view wx:for='{{demands}}' wx:key='id' class='touch-item {{item.isTouchMove ? "touch-move-active" : ""}}' data-index="{{index}}" bindtouchstart="touchstart" bindtouchmove="touchmove">
     <view class='content index_item'>
       <view class='item_status'>
-        <image src='../../assets/images/avatar.jpg'></image>
-        </view>
+        <image src='{{ item.user_avatar }}'></image>
+      </view>
       <navigator url='./demanddetail?id={{item.id}}' class='item_title'>{{item.title}}</navigator>
       <view class='item_favore'>
-        <image src='../../assets/images/star_selected.png' wx:if='{{item.isFavorite}}' bindtap='unstarDemand' data-demandid="{{item.id}}"></image>
+        <image src='../../assets/images/star_selected.png' bindtap='unstarDemand' data-demandid="{{item.id}}" data-favorableid="{{item.favorite_id}}"></image>
       </view>
     </view>
     <view class="del" catchtap="del" data-index="{{index}}">删除</view>
