--- a/pages/demand/demandlist.wxml
+++ b/pages/demand/demandlist.wxml
@@ -7,8 +7,8 @@
       </view>
       <navigator url='./demanddetail?id={{item.id}}' class='item_title'>{{item.title}}</navigator>
       <view class='item_favore'>
-        <image src='../../assets/images/star.png' wx:if='{{!item.isFavorite}}' bindtap='starDemand' data-demandid="{{item.id}}"></image>
-        <image src='../../assets/images/star_selected.png' wx:if='{{item.isFavorite}}' bindtap='unstarDemand' data-demandid="{{item.id}}"></image>
+        <image src='../../assets/images/star.png' wx:if='{{!item.favorite_id}}' bindtap='starDemand' data-demandid="{{item.id}}"></image>
+        <image src='../../assets/images/star_selected.png' wx:if='{{item.favorite_id}}' bindtap='unstarDemand' data-demandid="{{item.id}}" data-favorableid="{{item.favorite_id}}"></image>
       </view>
     </view>
     <view class="del" catchtap="del" data-index="{{index}}">删除</view>
