--- a/pages/myinfo/info_nickname.wxml
+++ b/pages/myinfo/info_nickname.wxml
@@ -4,7 +4,7 @@
     <view class="weui-cells weui-cells_after-title">
       <view class="weui-cell weui-cell_input">
         <view class="weui-cell__bd">
-          <input class="weui-input" name='nickname' placeholder="请输入昵称" value='{{user.nickname}}' />
+          <input class="weui-input" name='name' placeholder="请输入昵称" value='{{user.name}}' />
         </view>
       </view>
     </view>
