--- a/pages/myinfo/personinfo.wxml
+++ b/pages/myinfo/personinfo.wxml
@@ -1,23 +1,15 @@
 <!--pages/myinfo/personinfo.wxml-->
 <view class='page'>
   <view class='user_img'>
-    <view class='image'><open-data type="userAvatarUrl"></open-data></view>
+    <view class='image'>
+      <image src='{{user.avatar_url}}'></image>
+    </view>
   </view>
   <view class="weui-cells weui-cells_after-title">
     <navigator url="./info_nickname" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
       <view class="weui-cell__bd">昵称</view>
-      <view class="weui-cell__ft weui-cell__ft_in-access"><open-data type="userNickName"></open-data></view>
+      <view class="weui-cell__ft weui-cell__ft_in-access">{{user.name}}</view>
     </navigator>
-    <view class="weui-cell weui-cell_select">
-      <view class="weui-cell__bd weui-cell__hd_in-select-after">
-        <view class="weui-label">性别</view>
-      </view>
-      <view class="weui-cell__ft weui-cell__bd">
-        <picker bindchange="bindCountryChange" value="{{countryIndex}}" range="{{countries}}">
-            <view class="weui-select weui-select_in-select-after">{{countries[countryIndex]}}</view>
-        </picker>
-      </view>
-    </view>
     <navigator url="./info_tag" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
       <view class="weui-cell__bd">标签</view>
       <view class="weui-cell__ft weui-cell__ft_in-access"></view>
