--- a/components/Comment/comment_item.wxml
+++ b/components/Comment/comment_item.wxml
@@ -6,8 +6,8 @@
       </view>
       <view class='comment_item_content'>
         <view class='comment_top'>
-          <text class='user_name'>{{comment.user_name}} - {{comment.created_at}}</text>
-          <view><text class='reply frm' catchtap='showCommentForm'>回复</text></view>
+          <text class='user_name'>{{comment.user_name}}</text>
+          <view>{{comment.created_at}}<text class='reply frm' catchtap='showCommentForm'>回复</text></view>
         </view>
         <view class='comment_bottom'>
           <template is="wxParse" data="{{wxParseData:content.nodes}}"/>
@@ -19,6 +19,7 @@
           <view class='comment_item_content'>
             <view class='comment_top'>
               <text class='user_name'>{{item.user_name}}</text>
+          <view>{{item.created_at}}</view>
             </view>
             <view class='comment_bottom'>{{item.body}}</view>
           </view>
